--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,9 @@
     To change this template use Tools | Templates.
 */
 
+article{
+    background:pink;
+}
 body {
     background:#A60522;
     margin: 0 auto;
@@ -21,16 +24,35 @@ header figure img {
 }
 footer {
     background:yellowgreen;
+    overflow:hidden;
+    margin-top:2px;
 }
 nav {
-    background:blue;
+    background:gray;
     border-radius:5px;
     margin-bottom:2px;
     margin-top:2px;
+    position:relative;
+   
 }
+nav ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+nav ul li {
+    display:inline-block;
+}
+nav ul li a
+{
+	color: white;
+	display: block;
+	padding: 0.5em;
+	text-decoration: none;
+}
+
 .caja-footer {
     width:30%;
-    height:50px;    
     float:left;
     background:pink;
     margin-right:2px;
